@@ -2,7 +2,6 @@ package no.einnsyn.apiv3.entities.innsynskrav;
 
 import io.micrometer.core.instrument.MeterRegistry;
 import java.nio.charset.StandardCharsets;
-import java.time.Instant;
 import java.util.HashMap;
 import java.util.List;
 import java.util.UUID;
@@ -11,33 +10,33 @@ import lombok.extern.slf4j.Slf4j;
 import net.logstash.logback.argument.StructuredArguments;
 import no.einnsyn.apiv3.entities.enhet.models.Enhet;
 import no.einnsyn.apiv3.entities.innsynskrav.models.Innsynskrav;
-import no.einnsyn.apiv3.entities.innsynskravdel.InnsynskravDelService;
+import no.einnsyn.apiv3.entities.innsynskravdel.InnsynskravDelRepository;
 import no.einnsyn.apiv3.entities.innsynskravdel.models.InnsynskravDel;
-import no.einnsyn.apiv3.entities.innsynskravdel.models.InnsynskravDelDTO;
 import no.einnsyn.apiv3.utils.MailRenderer;
 import no.einnsyn.apiv3.utils.MailSender;
 import no.einnsyn.clients.ip.IPSender;
-import org.hibernate.validator.constraints.URL;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
 
 @Slf4j
 @Service
-@SuppressWarnings("java:S1192")
+@SuppressWarnings({"java:S1192", "LoggingPlaceholderCountMatchesArgumentCount"})
 public class InnsynskravSenderService {
 
   private final MailSender mailSender;
   private final MailRenderer mailRenderer;
   private final InnsynskravRepository innsynskravRepository;
-  private final InnsynskravDelService innsynskravDelService;
+  private final InnsynskravDelRepository innsynskravDelRepository;
   private final IPSender ipSender;
   private final OrderFileGenerator orderFileGenerator;
-  private MeterRegistry meterRegistry;
+  private final MeterRegistry meterRegistry;
 
   @SuppressWarnings("java:S6813")
   @Lazy
@@ -47,15 +46,14 @@ public class InnsynskravSenderService {
   @Value("${application.email.from}")
   private String emailFrom;
 
-  @URL
-  @Value("${application.baseUrl}")
-  private String emailBaseUrl;
-
   @Value("${application.integrasjonspunkt.expectedResponseTimeoutDays:30}")
   private int expectedResponseTimeoutDays;
 
   @Value("${application.integrasjonspunkt.orgnummer:000000000}")
   private String integrasjonspunktOrgnummer;
+
+  @Value("${application.innsynskrav.debugRecipient}")
+  private String debugRecipient;
 
   public InnsynskravSenderService(
       MailRenderer mailRenderer,
@@ -64,28 +62,29 @@ public class InnsynskravSenderService {
       InnsynskravRepository innsynskravRepository,
       OrderFileGenerator orderFileGenerator,
       MeterRegistry meterRegistry,
-      InnsynskravDelService innsynskravDelService) {
+      InnsynskravDelRepository innsynskravDelRepository) {
     this.mailRenderer = mailRenderer;
     this.mailSender = mailSender;
     this.ipSender = ipSender;
     this.innsynskravRepository = innsynskravRepository;
-    this.innsynskravDelService = innsynskravDelService;
+    this.innsynskravDelRepository = innsynskravDelRepository;
     this.orderFileGenerator = orderFileGenerator;
     this.meterRegistry = meterRegistry;
   }
 
-  @Transactional
+  @Transactional(rollbackFor = Exception.class)
   public void sendInnsynskrav(String innsynskravId) {
-    var innsynskrav = innsynskravRepository.findById(innsynskravId).orElse(null);
-    proxy.sendInnsynskrav(innsynskrav);
+    innsynskravRepository
+        .findById(innsynskravId)
+        .ifPresent(innsynskrav -> proxy.sendInnsynskrav(innsynskrav));
   }
 
   /**
    * Send innsynskrav to all enhets in an Innsynskrav.
    *
-   * @param innsynskrav
+   * @param innsynskrav The innsynskrav
    */
-  @Transactional
+  @Transactional(propagation = Propagation.MANDATORY)
   public void sendInnsynskrav(Innsynskrav innsynskrav) {
     // Get a map of innsynskravDel by enhet
     var innsynskravDelMap =
@@ -101,20 +100,27 @@ public class InnsynskravSenderService {
   /**
    * Input is a list
    *
-   * @param enhet
-   * @param innsynskrav
-   * @param innsynskravDelList
+   * @param enhet The enhet
+   * @param innsynskrav The innsynskrav
+   * @param unfilteredInnsynskravDelList The innsynskravDel list before all successfully sent are
+   *     removed
    */
   @Transactional
   @Async
   public void sendInnsynskrav(
       Enhet enhet, Innsynskrav innsynskrav, List<InnsynskravDel> unfilteredInnsynskravDelList) {
+    log.trace(
+        "sendInnsynskrav({}, {}, {})",
+        enhet.getId(),
+        innsynskrav.getId(),
+        unfilteredInnsynskravDelList.size());
 
     // Remove successfully sent innsynskravDels
     var filteredInnsynskravDelList =
         unfilteredInnsynskravDelList.stream()
             .filter(innsynskravDel -> innsynskravDel.getSent() == null)
             .toList();
+    log.trace("filteredInnsynskravDelList.size(): {}", filteredInnsynskravDelList.size());
 
     // Return early if there are no innsynskravDels
     if (filteredInnsynskravDelList.isEmpty()) {
@@ -122,7 +128,7 @@ public class InnsynskravSenderService {
     }
 
     // Find number of retries from first item in list
-    int retryCount = filteredInnsynskravDelList.get(0).getRetryCount();
+    int retryCount = filteredInnsynskravDelList.getFirst().getRetryCount();
     boolean sendThroughEformidling = enhet.isEFormidling() && retryCount < 3;
     boolean success = false;
 
@@ -148,29 +154,20 @@ public class InnsynskravSenderService {
         .increment();
 
     // Log
-    log.debug(
+    log.info(
         "Send innsynskrav {} using {}. Retries: {}. Status: {}",
         innsynskrav.getId(),
         sendThroughEformidling ? "eFormidling" : "e-mail",
         retryCount,
         success ? "success" : "failed");
 
-    // Update each innsynskravDel
-    var updateDTO = new InnsynskravDelDTO();
-    if (success) {
-      updateDTO.setSent(Instant.now().toString());
-    } else {
-      updateDTO.setRetryCount(retryCount + 1);
-      updateDTO.setRetryTimestamp(Instant.now().toString());
-    }
-
     for (var innsynskravDel : filteredInnsynskravDelList) {
-      log.trace("Update sent status for {}", innsynskravDel.getId());
-      try {
-        // This has to be done in a new transaction since we're in an @Async method
-        innsynskravDelService.update(innsynskravDel.getId(), updateDTO);
-      } catch (Exception e) {
-        log.error("Failed to set updated status for InnsynskravDel " + innsynskravDel.getId(), e);
+      var innsynskravDelId = innsynskravDel.getId();
+      log.trace("Update sent status for {}", innsynskravDelId);
+      if (success) {
+        innsynskravDelRepository.setSent(innsynskravDelId);
+      } else {
+        innsynskravDelRepository.updateRetries(innsynskravDelId);
       }
     }
   }
@@ -178,10 +175,10 @@ public class InnsynskravSenderService {
   /**
    * Send innsynskrav through email
    *
-   * @param enhet
-   * @param innsynskrav
-   * @param innsynskravDelList
-   * @return
+   * @param enhet The receiving enhet
+   * @param innsynskrav The innsynskrav
+   * @param innsynskravDelList The innsynskravDel list
+   * @return True if successful
    */
   public boolean sendInnsynskravByEmail(
       Enhet enhet, Innsynskrav innsynskrav, List<InnsynskravDel> innsynskravDelList) {
@@ -196,7 +193,13 @@ public class InnsynskravSenderService {
       var orderxml = orderFileGenerator.toOrderXML(enhet, innsynskrav, innsynskravDelList);
       var byteArrayResource = new ByteArrayResource(orderxml.getBytes(StandardCharsets.UTF_8));
 
-      var emailTo = "gisle@gisle.net"; // TODO: Set recipient when we are sure things are working.
+      // Set emailTo to debugRecipient if it is set (for testing)
+      var emailTo =
+          StringUtils.hasText(debugRecipient) ? debugRecipient : enhet.getInnsynskravEpost();
+      if (emailTo == null) {
+        log.error("No email address found for enhet {}", enhet.getId());
+        return false;
+      }
 
       log.info("Sending innsynskrav to {}", emailTo, StructuredArguments.raw("payload", orderxml));
       mailSender.send(
@@ -218,10 +221,10 @@ public class InnsynskravSenderService {
   /**
    * Send innsynskrav through eFormidling
    *
-   * @param enhet
-   * @param innsynskrav
-   * @param innsynskravDelList
-   * @return
+   * @param enhet The receiving enhet
+   * @param innsynskrav The innsynskrav
+   * @param innsynskravDelList The innsynskravDel list
+   * @return True if successful
    */
   public boolean sendInnsynskravThroughEFormidling(
       Enhet enhet, Innsynskrav innsynskrav, List<InnsynskravDel> innsynskravDelList) {
@@ -250,7 +253,7 @@ public class InnsynskravSenderService {
     }
 
     try {
-      log.debug(
+      log.info(
           "Sending innsynskrav {} to eFormidling",
           innsynskrav.getId(),
           StructuredArguments.raw("payload", orderxml));
